--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^6.5.0",
     "react": "17.0.2",
     "react-native": "0.67.2",
+    "react-native-fs": "^2.18.0",
     "react-native-image-picker": "^4.7.3",
     "react-native-permissions": "^3.2.0",
     "react-native-safe-area-context": "^3.3.2",
