--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -189,6 +189,9 @@ android {
 }
 
 dependencies {
+        implementation 'com.google.android.gms:play-services-base:18.0.1'
+        implementation 'com.google.android.gms:play-services-maps:18.0.1'
+
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
