--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: "com.android.application"
+apply plugin: 'com.google.gms.google-services'
 
 import com.android.build.OutputFile
 
@@ -191,7 +192,10 @@ android {
 dependencies {
         implementation 'com.google.android.gms:play-services-base:18.0.1'
         implementation 'com.google.android.gms:play-services-maps:18.0.1'
-
+        
+        implementation platform('com.google.firebase:firebase-bom:29.1.0')
+        implementation platform('com.google.firebase:firebase-auth')
+    
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
